server api routing setup

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
 		"build-client-env": "rm -rf dist/public && webpack --config webpack.config.client.js --mode",
 		"build-client-dev": "npm run build-client-env development",
 		"build-client": "npm run build-client-env production",
-		"build-server": "rm -rf dist && babel src/server -d dist",
-		"build-env": "npm run build-server && npm run build-client-env",
+		"build-service": "rm -rf dist && babel src/service -d dist",
+		"build-env": "npm run build-service && npm run build-client-env",
 		"build-dev": "npm run build-env development",
 		"build": "npm run build-env production",
-		"start-server": "node dist/index.js",
-		"start-dev": "npm run build-dev && npm run start-server",
+		"start-service": "node dist/index.js",
+		"start-dev": "npm run build-dev && npm run start-service",
 		"start": "npm run build && npm run start-server"
 	},
 	"keywords": [],
