--- a/package.json
+++ b/package.json
@@ -4,17 +4,13 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build-client-env": "rm -rf dist/public && webpack --config webpack.config.client.js --mode",
-		"build-client-dev": "npm run build-client-env development",
-		"build-client": "npm run build-client-env production",
+		"build-client": "rm -rf dist/public && mkdir dist/public && cd src/client && npm run build && cd ../../ && cp -R src/client/build/. dist/public",
 		"build-service": "rm -rf dist && babel src/service -d dist",
-		"build-env": "npm run build-service && npm run build-client-env",
-		"build-dev": "npm run build-env development",
-		"build": "npm run build-env production",
+		"build": "npm run build-service && npm run build-client",
 		"start-service": "node dist/index.js",
 		"start-service-only": "npm run build-service && npm run start-service",
-		"start-dev": "npm run build-dev && npm run start-service",
-		"start": "npm run build && npm run start-server"
+		"start": "npm run build && npm run start-service",
+		"watch": "npm-watch"
 	},
 	"keywords": [],
 	"author": "",
@@ -31,9 +27,9 @@
 		"@babel/cli": "^7.2.3",
 		"@babel/core": "^7.3.4",
 		"@babel/preset-env": "^7.3.4",
-		"html-webpack-plugin": "^3.2.0",
-		"webpack": "^4.29.6",
-		"webpack-cli": "^3.2.3"
+		"@material-ui/core": "^3.9.2",
+		"npm-watch": "^0.6.0",
+		"typeface-roboto": "0.0.54"
 	},
 	"babel": {
 		"presets": [
@@ -42,5 +38,8 @@
 		"plugins": [
 			"@babel/plugin-proposal-object-rest-spread"
 		]
+	},
+	"watch": {
+		"start-service-only": "src/service/*.js"
 	}
 }
