--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"inert": "^5.1.2",
 		"lodash": "^4.17.11",
 		"node-fetch": "^2.3.0",
-		"redis": "^2.8.0"
+		"redis": "^2.8.0",
+		"socket.io": "^2.2.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.2.3",
