--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build-service": "rm -rf dist && babel src/service -d dist",
 		"build": "npm run build-service && npm run build-client",
 		"start-service": "node dist/index.js",
-		"start-service-only": "npm run build-service && npm run start-service",
+		"start-service-only": "npm run build-service && npm run start-service -- 8000",
 		"start": "npm run build && npm run start-service",
 		"watch": "npm-watch"
 	},
